modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2633.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2634.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2635.ipynb"

--- a/セクション5.ipynb
+++ b/セクション5.ipynb
@@ -26,7 +26,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# テクニカルメタデータの一種データプロファイリング\n"
+    "# テクニカルメタデータの一種データプロファイリング\n",
+    "テクニカルメタデータの一種である、"
    ]
   },
   {
@@ -106,14 +107,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+\n",
+      "|row_num|\n",
+      "+-------+\n",
+      "|    300|\n",
+      "+-------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 件数の取得\n",
-    "spark.sql(\"REFRESH TABLE data_management_cruch_course.jinko_table \")\n",
-    "row_num=spark.sql(\"select count(*) as row_num from data_management_cruch_course.jinko_table \")\n",
-    "row_num.show()"
+    "spark.sql(\"REFRESH TABLE data_management_crush_course.jinko_table \")\n",
+    "record_num=spark.sql(\"select count(*) as row_num from data_management_crush_course.jinko_table \")\n",
+    "record_num.show()\n",
+    "\n",
+    "\n",
+    "record_count=record_num.collect()[0].asDict()['row_num']"
    ]
   },
   {
@@ -205,23 +222,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
-      "|cardinaryty_code|cardinaryty_gengo|cardinaryty_wareki|cardinaryty_seireki|cardinaryty_chu|cardinaryty_sokei|cardinaryty_jinko_male|cardinaryty_jinko_femail|cardinaryty_kenmei|\n",
-      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
-      "|            1.00|             1.00|              6.00|               6.00|           0.00|             6.00|                  6.00|                    6.00|              1.00|\n",
-      "+----------------+-----------------+------------------+-------------------+---------------+-----------------+----------------------+------------------------+------------------+\n",
-      "\n",
-      "6.00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#　セレクティビティはキーを指定した場合（今回の場合はkenmei）レコードの返却はどれくらいであるかを想定するものです\n",
@@ -273,18 +276,40 @@
     "データプロファイリング３では、コンシステンシーについて考えてみたいと思います。\n",
     "コンシステンシーとは一貫性があるかないかという指標です。\n",
     "\n",
-    "例えばkenmei_codeと今回のjinko_tableを使ってみていきましょう(作成はチャプター３で行っています)"
+    "例えばkenmei_code(今回はマスターテーブルと考えてください)と今回のjinko_tableを使ってみていきましょう(作成はチャプター３で実施済みです)\n",
+    "\n",
+    "もっとも一般的な一貫性のチェックはマスターテーブルなどのコードとの一致率を調べることです。\n",
+    "数値で出すというより、Yes Noくらいの判定でもOKです。\n",
+    "\n",
+    "マスターコードが更新されていない（もしくは正しく更新されていない）場合必ず結合時に火もつかないレコードが存在します。  \n",
+    "データ分析においてはテーブルの結合はデータの価値を高めていく行為の一つですそこでデータの欠落が起きてしまうとそれだけで価値が下がってしまうことにもつながります。  "
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# データプロファイリングの結果をMysqlテーブルに格納してみよう\n",
+    "# 一貫しているかどうかを判定するためには集合演算を使います\n",
     "\n",
-    "頑張ればSparkを使って書き込むこともできますが、きれいなPGにはならないのでSparkの機能は使わずにPythonから実行するようにします\n",
+    "#jinko_codeにおけるcodeとjinko_tableにおけるcodeを比較してみることにします。\n",
+    "#マスターテーブルですので、本来であれば差分は0となるはずです\n",
     "\n",
-    "\n"
+    "jinko_code=spark.sql(\"select code from data_management_crush_course.jinko_code\")\n",
+    "jinko_table=spark.sql(\"select distinct(code) from data_management_crush_course.jinko_table\")\n",
+    "\n",
+    "print(jinko_code.count() )\n",
+    "print(jinko_table.count())\n",
+    "\n",
+    "consistency_judge_f=True\n",
+    "\n",
+    "# 件数が多い方を左側にするといいです。\n",
+    "if jinko_table.subtract(jinko_code).selectExpr('code as diff').count() !=0:\n",
+    "    consistency_judge_f = False\n",
+    "\n",
+    "#結果\n",
+    "print(consistency_judge_f)\n"
    ]
   },
   {
@@ -292,8 +317,120 @@
    "metadata": {},
    "source": [
     "# 結果を格納しよう\n",
-    "決して綺麗な入れ方ではありませんがここでも結果を格納してみましょう。\n",
+    "これまでの結果を格納してみましょう\n",
+    "\n",
+    "- 件数\n",
+    "- セレクティビティ\n",
+    "- コンシステンシーチェック\n",
+    "\n",
+    "これら３つの結果を保存してみましょう。\n",
+    "\n",
+    "それぞれ対応する変数は以下になります。\n",
+    "\n",
+    "- record_count\n",
+    "- cols_selctivity_max\n",
+    "- consistency_judge_f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "|       database_name| table_name|    table_definition|                               sammary|record_num|selectivity|consistency_flag|frequency_access|\n",
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "|data_management_c...|jinko_table|CREATE TABLE `dat...|一旦テーブルの説明は空にしておきます。|       300|       6.00|           false|            null|\n",
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from pyspark.sql.functions import when\n",
+    "metadata_df=spark.sql(\"select * from metadata_tmp.sample_metadata \")\n",
+    "\n",
+    "# メタデータ取得対象のデータを更新する\n",
+    "metadata_df = metadata_df.withColumn(\"record_num\", when(metadata_df.record_num.isNull() ,record_count).otherwise(metadata_df.record_num))\n",
+    "metadata_df = metadata_df.withColumn(\"selectivity\", when(metadata_df.selectivity.isNull() ,cols_selctivity_max).otherwise(metadata_df.selectivity))\n",
+    "metadata_df = metadata_df.withColumn(\"consistency_flag\", when(metadata_df.consistency_flag.isNull() ,consistency_judge_f).otherwise(metadata_df.consistency_flag))\n",
+    "\n",
+    "metadata_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#取得したデータをmetadata_tmp.sample_metadataに格納していきます\n",
+    "#読み込んだテーブルに対して直接データを入れることができないので、一度ファイルを吐き出します\n",
+    "\n",
+    "spark.sql(\"REFRESH TABLE metadata_tmp.sample_metadata\")\n",
+    "metadata_df.write.mode('overwrite').parquet(\"/Users/saitouyuuki/Desktop/src/pyspark_dataprofiling_dataquality/dataset/tmp/\")\n",
+    "insert_df=spark.read.parquet(\"/Users/saitouyuuki/Desktop/src/pyspark_dataprofiling_dataquality/dataset/tmp/\")\n",
+    "\n",
+    "#取得したデータをmetadata_tmp.sample_metadataに格納していきます\n",
+    "insert_df.createOrReplaceTempView(\"sample\")\n",
+    "\n",
+    "spark.sql(\"\"\"\n",
+    "Insert overwrite  table metadata_tmp.sample_metadata \n",
+    "select  * from sample\n",
+    "\"\"\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "|       database_name| table_name|    table_definition|                               sammary|record_num|selectivity|consistency_flag|frequency_access|\n",
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "|data_management_c...|jinko_table|CREATE TABLE `dat...|一旦テーブルの説明は空にしておきます。|       300|       6.00|           false|            null|\n",
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 結果の確認をしてみます\n",
+    "\n",
+    "spark.sql(\"select * from metadata_tmp.sample_metadata \").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stopは忘れずに\n",
+    "# 忘れてしまうと、いつの間にか接続が溜まっていってしまいます\n",
+    "spark.stop()\n",
+    "spark.sparkContext.stop()"
    ]
   },
   {
