modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2633.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2634.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2635.ipynb"

--- a/セクション5.ipynb
+++ b/セクション5.ipynb
@@ -27,7 +27,14 @@
    "metadata": {},
    "source": [
     "# テクニカルメタデータの一種データプロファイリング\n",
-    "テクニカルメタデータの一種である、"
+    "テクニカルメタデータの一種にはデータプロファリングがあります。\n",
+    "データプロファイリングは、データの特性をクエリせずともわかるようにすることが目的になります。\n",
+    "\n",
+    "特にクラウド環境では使った分だけお金を取られるため、できる限り無駄なクエリはユーザに発行させないことが重要です。\n",
+    "\n",
+    "ユーザ1000人がcount文を打つだけでも相当な金額になることがあるのです。\n",
+    "\n",
+    "ここからは、データプロファリングをどうのように取得していくのかというイメージをSparkを使いながら実行していきましょう。"
    ]
   },
   {
@@ -107,22 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+\n",
-      "|row_num|\n",
-      "+-------+\n",
-      "|    300|\n",
-      "+-------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 件数の取得\n",
     "spark.sql(\"REFRESH TABLE data_management_crush_course.jinko_table \")\n",
@@ -334,22 +328,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
-      "|       database_name| table_name|    table_definition|                               sammary|record_num|selectivity|consistency_flag|frequency_access|\n",
-      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
-      "|data_management_c...|jinko_table|CREATE TABLE `dat...|一旦テーブルの説明は空にしておきます。|       300|       6.00|           false|            null|\n",
-      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "from pyspark.sql.functions import when\n",
@@ -365,20 +346,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[]"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#取得したデータをmetadata_tmp.sample_metadataに格納していきます\n",
     "#読み込んだテーブルに対して直接データを入れることができないので、一度ファイルを吐き出します\n",
@@ -399,22 +369,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
-      "|       database_name| table_name|    table_definition|                               sammary|record_num|selectivity|consistency_flag|frequency_access|\n",
-      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
-      "|data_management_c...|jinko_table|CREATE TABLE `dat...|一旦テーブルの説明は空にしておきます。|       300|       6.00|           false|            null|\n",
-      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 結果の確認をしてみます\n",
     "\n",
