new file:   logfiles/spark_operation.log.1 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2634.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2635.ipynb" 	modified:   "\343\202\273\343\202\257\343\202\267\343\203\247\343\203\2636.ipynb"

--- a/セクション4.ipynb
+++ b/セクション4.ipynb
@@ -298,9 +298,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "|       database_name| table_name|    table_definition|                               sammary|record_num|selectivity|consistency_flag|frequency_access|\n",
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "|data_management_c...|jinko_table|CREATE TABLE `dat...|一旦テーブルの説明は空にしておきます。|       300|       6.00|           false|            null|\n",
+      "+--------------------+-----------+--------------------+--------------------------------------+----------+-----------+----------------+----------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Mon Nov 22 22:12:25 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Mon Nov 22 22:12:25 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Mon Nov 22 22:12:25 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "Mon Nov 22 22:12:25 JST 2021 WARN: Establishing SSL connection without server's identity verification is not recommended. According to MySQL 5.5.45+, 5.6.26+ and 5.7.6+ requirements SSL connection must be established by default if explicit option isn't set. For compliance with existing applications not using SSL the verifyServerCertificate property is set to 'false'. You need either to explicitly disable SSL by setting useSSL=false, or set useSSL=true and provide truststore for server certificate verification.\n",
+      "----------------------------------------\n",
+      "Exception occurred during processing of request from ('127.0.0.1', 59922)\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/saitouyuuki/.pyenv/versions/3.9.1/lib/python3.9/socketserver.py\", line 316, in _handle_request_noblock\n",
+      "    self.process_request(request, client_address)\n",
+      "  File \"/Users/saitouyuuki/.pyenv/versions/3.9.1/lib/python3.9/socketserver.py\", line 347, in process_request\n",
+      "    self.finish_request(request, client_address)\n",
+      "  File \"/Users/saitouyuuki/.pyenv/versions/3.9.1/lib/python3.9/socketserver.py\", line 360, in finish_request\n",
+      "    self.RequestHandlerClass(request, client_address, self)\n",
+      "  File \"/Users/saitouyuuki/.pyenv/versions/3.9.1/lib/python3.9/socketserver.py\", line 720, in __init__\n",
+      "    self.handle()\n",
+      "  File \"/opt/homebrew/opt/apache-spark/libexec/python/pyspark/accumulators.py\", line 262, in handle\n",
+      "    poll(accum_updates)\n",
+      "  File \"/opt/homebrew/opt/apache-spark/libexec/python/pyspark/accumulators.py\", line 235, in poll\n",
+      "    if func():\n",
+      "  File \"/opt/homebrew/opt/apache-spark/libexec/python/pyspark/accumulators.py\", line 239, in accum_updates\n",
+      "    num_updates = read_int(self.rfile)\n",
+      "  File \"/opt/homebrew/opt/apache-spark/libexec/python/pyspark/serializers.py\", line 564, in read_int\n",
+      "    raise EOFError\n",
+      "EOFError\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# 結果の確認をしてみます\n",
     "\n",
