--- a/セクション6.ipynb
+++ b/セクション6.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,9 +62,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Ignoring non-Spark config property: hive.exec.dynamic.partition.mode\n",
+      "Warning: Ignoring non-Spark config property: hive.exec.dynamic.partition\n",
+      "Your hostname, yukisaitos-MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.0.30 instead (on interface en0)\n",
+      "Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "WARNING: An illegal reflective access operation has occurred\n",
+      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/opt/homebrew/Cellar/apache-spark/3.2.0/libexec/jars/spark-unsafe_2.12-3.2.0.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
+      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
+      "WARNING: All illegal access operations will be denied in a future release\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "Service 'SparkUI' could not bind on port 4041. Attempting port 4042.\n"
+     ]
+    }
+   ],
    "source": [
     "#pysparkに必要なライブラリを読み込む\n",
     "from pyspark import SparkConf\n",
@@ -87,6 +108,61 @@
     "\n",
     "\n",
     "# spark.xxxxxと記載することで処理を分散させることが可能です。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+\n",
+      "|     tmp[3]|\n",
+      "+-----------+\n",
+      "|         It|\n",
+      "|    Pruning|\n",
+      "|     Pushed|\n",
+      "|  Post-Scan|\n",
+      "|     Output|\n",
+      "|      Block|\n",
+      "|      Block|\n",
+      "|      Added|\n",
+      "|    Created|\n",
+      "|   Selected|\n",
+      "|   Planning|\n",
+      "|Registering|\n",
+      "|        Got|\n",
+      "|      Final|\n",
+      "|    Parents|\n",
+      "|    Missing|\n",
+      "| Submitting|\n",
+      "|      Block|\n",
+      "|      Block|\n",
+      "|      Added|\n",
+      "+-----------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# INFO  - ugi=saitouyuuki ip=unknown-ip-addr      cmd=get_partitions : db=data_management_crush_course tbl=jinko_tabl\n",
+    "from pyspark.sql.functions import split, col\n",
+    "df=spark.read.text(\"/Users/saitouyuuki/Desktop/src/pyspark_dataprofiling_dataquality/logfiles/spark_operation.log.1\")\n",
+    "df.withColumn(\"tmp\", split(df.value,\"\\s\")).select(col(\"tmp\").getItem(3)).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()\n",
+    "spark.sparkContext.stop()"
    ]
   }
  ],
